--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel index.js -d dist",
+    "build": "babel ./src -d dist",
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon --exec babel-node index.js"
   },
@@ -30,6 +30,7 @@
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
